tests/error/type_match/tuple_auto.bz
// error: expression type '[int32, void]' is not instantiable
// error: variable type '[int32, void]' is not instantiable
function test()
{
	let _: auto = [ 1, {} ];
}
